--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ scikit_learn==1.2.1
 scipy==1.10.1
 six==1.16.0
 
-# for CUDA 11.6 torch on Linux
---find-links https://download.pytorch.org/whl/cu116; sys_platform == "linux"
-torch==1.12.1; sys_platform == "linux"
-torchvision==0.13.1; sys_platform == "linux"
+# for CUDA 11.8 torch on Linux
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.1.0; sys_platform == "linux"
+torchvision==0.16.0; sys_platform == "linux"
 
 # for cpu mac
 torch==1.12.1; sys_platform == "darwin"
